// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PerimeterLayer > should render perimeters when they exist 1`] = `
<div>
  <div
    data-height="600"
    data-testid="konva-stage"
    data-width="800"
  >
    <div
      data-name="perimeters"
      data-testid="konva-layer"
    >
      <div
        data-id="perimeter1"
      >
        PerimeterShape
      </div>
    </div>
  </div>
</div>
`;

exports[`PerimeterLayer > should render without perimeters 1`] = `
<div>
  <div
    data-height="600"
    data-testid="konva-stage"
    data-width="800"
  >
    <div
      data-name="perimeters"
      data-testid="konva-layer"
    />
  </div>
</div>
`;
